完成英雄的编辑删除功能,并完善接口文档

--- a/web/views/index.html
+++ b/web/views/index.html
@@ -70,10 +70,12 @@
               
             </tbody>
         </table>
+        <!-- 弹出框 -->
         <div class="ui modal">
-           
+           <!-- 模板渲染 -->
         </div>
     </div>
+    <!-- 英雄列表模板 -->
     <script type="text/template" id="heroList">
         {{each data}}
             <tr>
@@ -92,6 +94,7 @@
             </tr>
               {{/each}}
     </script>
+    <!-- 弹出框模板 -->
     <script type="text/template" id="getHero">
         <form class="ui form">
                 <div class="field">
